Import changes from Deta

--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,7 @@
                         /generate/ics/classes?faculty=foo&year=bar&group=spam
                       </code>
                       <br>
-                      Здесь foo - код факультета (смотрите таблицу ниже), bar - курсы с 1 по 6, spam - краткий шифр группы (к примеру, ПИа).
+                      Здесь foo - код факультета (смотрите таблицу ниже), bar - курсы с 1 по 6, spam - краткий шифр группы (к примеру, ПИа), закодированный в Base64 (<a href="https://www.base64encode.org/">конвертер</a>).
                     </p>
                     <p>
                       URI-схема запроса для создания календаря расписания зачётов: <br>
@@ -43,7 +43,7 @@
                         /generate/ics/finals?faculty=foo&year=bar&group=spam
                       </code>
                       <br>
-                      Здесь foo - код факультета (смотрите таблицу ниже), bar - курсы с 1 по 6, spam - краткий шифр группы (к примеру, ПИа).
+                      Здесь foo - код факультета (смотрите таблицу ниже), bar - курсы с 1 по 6, spam - краткий шифр группы (к примеру, ПИа), закодированный в Base64 (<a href="https://www.base64encode.org/">конвертер</a>).
                     </p>
                 </div>
             </div>
